--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -19,6 +19,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "resolutions": {
+    "browserslist": "^4.16.5",
+    "dns-packet": "^1.3.2",
+    "ws": "^7.4.6"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
