--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -22,7 +22,8 @@
   "resolutions": {
     "browserslist": "^4.16.5",
     "dns-packet": "^1.3.2",
-    "ws": "^7.4.6"
+    "ws": "^7.4.6",
+    "normalize-url": "^4.5.1"
   },
   "eslintConfig": {
     "extends": [
