--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -23,7 +23,8 @@
     "browserslist": "^4.16.5",
     "dns-packet": "^1.3.2",
     "ws": "^7.4.6",
-    "normalize-url": "^4.5.1"
+    "normalize-url": "^4.5.1",
+    "glob-parent": "5.1.2"
   },
   "eslintConfig": {
     "extends": [
